NEXT:
 * temporary build directories are located in a version specific directory
   now
 * e2-install-e2 installs branches properly now. Git refs can be specified.
 * a bug in e2-build --force-rebuild was fixed that prevented forced rebuilds
 * the chroot environment is locked now when in use
 * hardlinks are used when preparing the result tarball, if possible, to
   improve performance
 * logfiles are rotated instead of deleting them
 * a bug in configuration validation for files sources was fixed
 * unused code was removed
 * the faq section in the documentation was extended
 * outdated documentation was removed

e2factory-2.3.1
 * bugfixes

e2factory-2.3.1rc1
 * bugfixes, documentation

e2factory-2.3.1pre1
 * bugfixes
 * support grouping source and result configuration by allowing
   subdirectories in the res/ and src/ directories
 * support extension packages (see README.extensions)
 * move all build time configuration to a single lua module
 * split up the version string into parts, move all occurrences of version
   information into one place

e2factory-2.3.0
 * INSTALL documentation changes

e2factory 2.3.0pre3
 * synchronize default e2factory local version again

e2factory 2.3.0pre2
 * change email addresses

e2factory 2.3.0pre1
 * create free software package
 * almost no changes to the source since e2factory 2.2.0